# rust-keylock-lib

./: .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  Xargo.toml  build.rs
.github/workflows/: ci-workflow.yml
docs/: search-index.js
docs/base64/: enum.DecodeError.html  enum.LineEnding.html  enum.LineWrap.html  fn.decode.html  fn.decode_config.html  fn.decode_config_buf.html  fn.encode.html  fn.encode_config.html  fn.encode_config_buf.html  index.html  sidebar-items.js  static.MIME.html  static.STANDARD.html  static.URL_SAFE.html  static.URL_SAFE_NO_PAD.html  struct.Config.html
docs/crypto/: index.html
docs/crypto/aead/: index.html  trait.AeadDecryptor.html  trait.AeadEncryptor.html
docs/crypto/aes/: enum.KeySize.html  fn.cbc_decryptor.html  fn.cbc_encryptor.html  fn.ctr.html  fn.ecb_decryptor.html  fn.ecb_encryptor.html  index.html
docs/crypto/aes_gcm/: index.html  struct.AesGcm.html
docs/crypto/aesni/: index.html  struct.AesNiDecryptor.html  struct.AesNiEncryptor.html
docs/crypto/aessafe/: index.html  struct.AesSafe128Decryptor.html  struct.AesSafe128DecryptorX8.html  struct.AesSafe128Encryptor.html  struct.AesSafe128EncryptorX8.html  struct.AesSafe192Decryptor.html  struct.AesSafe192DecryptorX8.html  struct.AesSafe192Encryptor.html  struct.AesSafe192EncryptorX8.html  struct.AesSafe256Decryptor.html  struct.AesSafe256DecryptorX8.html  struct.AesSafe256Encryptor.html  struct.AesSafe256EncryptorX8.html
docs/crypto/bcrypt/: fn.bcrypt.html  index.html
docs/crypto/bcrypt_pbkdf/: fn.bcrypt_pbkdf.html  index.html
docs/crypto/blake2b/: index.html  struct.Blake2b.html
docs/crypto/blake2s/: index.html  struct.Blake2s.html
docs/crypto/blockmodes/: index.html  struct.CbcDecryptor.html  struct.CbcEncryptor.html  struct.CtrMode.html  struct.CtrModeX8.html  struct.DecPadding.html  struct.EcbDecryptor.html  struct.EcbEncryptor.html  struct.EncPadding.html  struct.NoPadding.html  struct.PkcsPadding.html  trait.PaddingProcessor.html
docs/crypto/blowfish/: index.html  struct.Blowfish.html
docs/crypto/buffer/: enum.BufferResult.html  index.html  struct.BorrowedWriteBuffer.html  struct.OwnedReadBuffer.html  struct.OwnedWriteBuffer.html  struct.RefReadBuffer.html  struct.RefWriteBuffer.html  trait.ReadBuffer.html  trait.WriteBuffer.html
docs/crypto/chacha20/: index.html  struct.ChaCha20.html
docs/crypto/chacha20poly1305/: index.html  (+1 more)
docs/libc/: constant.AIO_ALLDONE.html  constant.AIO_CANCELED.html  constant.AIO_NOTCANCELED.html  constant.AI_ADDRCONFIG.html  constant.AI_ALL.html  constant.AI_CANONNAME.html  constant.AI_NUMERICHOST.html  constant.AI_NUMERICSERV.html  constant.AI_PASSIVE.html  constant.AI_V4MAPPED.html  constant.AT_FDCWD.html  constant.AT_SYMLINK_NOFOLLOW.html  constant.BRKINT.html  constant.BS0.html  constant.CLONE_CHILD_CLEARTID.html  constant.CLONE_CHILD_SETTID.html  constant.CLONE_DETACHED.html  constant.CLONE_FILES.html  constant.CLONE_FS.html  constant.CLONE_IO.html  constant.CLONE_NEWIPC.html  constant.CLONE_NEWNET.html  constant.CLONE_NEWNS.html  constant.CLONE_NEWPID.html  constant.CLONE_NEWUSER.html  constant.CLONE_NEWUTS.html  constant.CLONE_PARENT.html  constant.CLONE_PARENT_SETTID.html  constant.CLONE_PTRACE.html  constant.CLONE_SETTLS.html  constant.CLONE_SIGHAND.html  constant.CLONE_SYSVSEM.html  constant.CLONE_THREAD.html  constant.CLONE_UNTRACED.html  constant.CLONE_VFORK.html  constant.CLONE_VM.html  constant.CR0.html  constant.CRTSCTS.html  constant.CS5.html  constant.EAI_AGAIN.html  (+547 more)
docs/log/: enum.LogLevel.html  enum.LogLevelFilter.html  fn.max_log_level.html  fn.set_logger.html  fn.set_logger_raw.html  fn.shutdown_logger.html  fn.shutdown_logger_raw.html  index.html  struct.LogLocation.html  struct.LogMetadata.html  struct.LogRecord.html  struct.MaxLogLevelFilter.html  struct.SetLoggerError.html  struct.ShutdownLoggerError.html  trait.Log.html
docs/rust_keylock/: Menu.t.html  Safe.t.html  UserSelection.t.html  enum.Menu.html  enum.UserSelection.html  fn.execute.html  index.html  sidebar-items.js  struct.Entry.html  struct.Props.html  struct.Safe.html  trait.Editor.html
docs/secstr/: SecStr.t.html  index.html  sidebar-items.js  struct.SecStr.html
docs/time/: struct.Duration.html  struct.Timespec.html  struct.Tm.html
docs/toml/: enum.DecodeErrorKind.html  enum.Error.html  enum.Value.html  fn.decode.html  fn.decode_str.html  fn.encode.html  fn.encode_str.html  index.html  struct.DecodeError.html  struct.Decoder.html  struct.Encoder.html  struct.EncoderState.html  struct.Parser.html  struct.ParserError.html  type.Array.html  type.Table.html
rust-crypto-stable_0.2/: Cargo.toml  README.md  appveyor.yml
rust-crypto-stable_0.2/examples/: symmetriccipher.rs
rust-crypto-stable_0.2/src/: aes.rs  aes_gcm.rs  aesni.rs  aessafe.rs  bcrypt.rs  bcrypt_pbkdf.rs  blake2b.rs  blake2s.rs  blockmodes.rs  blowfish.rs  buffer.rs  chacha20.rs  chacha20poly1305.rs  cryptoutil.rs  curve25519.rs  digest.rs  ed25519.rs  fortuna.rs  ghash.rs  hc128.rs  hkdf.rs  hmac.rs  lib.rs  mac.rs  md5.rs  pbkdf2.rs  poly1305.rs  rc4.rs  ripemd160.rs  salsa20.rs  scrypt.rs  sha1.rs  sha2.rs  sha3.rs  sosemanuk.rs  symmetriccipher.rs  util.rs  whirlpool.rs
rust-crypto-stable_0.2/tests/: aes.rs
rust-crypto-stable_0.2/tools/: generate_aes_tests.lua  hex_string_to_hex_vec_u8.lua
src/: datacrypt.rs  errors.rs  file_handler.rs  lib.rs  protected.rs  rest_server.rs  selection_handling.rs  utils.rs
src/api/: mod.rs  safe.rs
src/async/: mod.rs  nextcloud.rs
src/asynch/: dropbox.rs  mod.rs  nextcloud.rs
tests/: execution_cases.rs
(+274 files in other folders)
