[package]
name = "rust_keylock"
version = "0.15.1"
authors = ["aston <astonbitecode@gmail.com>"]
description = "A password manager with goals to be Secure, Simple to use, Portable and Extensible"
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
documentation = "https://rust-keylock.github.io/rust-keylock-lib/rust_keylock/"
repository = "https://github.com/rust-keylock/rust-keylock-lib"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]
edition = "2021"

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-lib", branch = "master" }

[lib]
name = "rust_keylock"
crate-type = ["rlib", "dylib"]

[dependencies]
ctr = "0.9"
aes = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
cipher = "0.4"
bcrypt = "0.15"
base64 = "0.21"
rand = "0.8"
log = "0.4"
secstr = "0.5"
hyper = {version = "0.14", features = ["full"]}
http = "0.2"
percent-encoding = "2.3"
url = "2.4"
futures = "0.3"
hyper-tls = "0.5"
native-tls = "0.2"
xml-rs = "0.8"
openssl-probe = "0.1"
terminal-clipboard = "0.4.1"
dirs = "3.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde_json = "1.0"
rs-password-utils = "0.2"
async-trait = "0.1.41"
zeroize = {version = "1.6", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.toml]
version = "0.8"
default-features = false
features = ["preserve_order", "display", "parse"]

[dev-dependencies]
lazy_static = "1.4"