[package]
name = "rust_keylock"
version = "0.16.0"
authors = ["aston <astonbitecode@gmail.com>"]
description = "A password manager with goals to be Secure, Simple to use, Portable and Extensible"
keywords = ["password", "manager", "safe", "encryption", "key"]
license = "GPL-3.0"
documentation = "https://rust-keylock.github.io/rust-keylock-lib/rust_keylock/"
repository = "https://github.com/rust-keylock/rust-keylock-lib"
homepage = "https://rust-keylock.github.io/"
readme = "README.md"
categories = ["cryptography", "authentication"]
edition = "2021"

[badges]
travis-ci = { repository = "rust-keylock/rust-keylock-lib", branch = "master" }

[lib]
name = "rust_keylock"
crate-type = ["rlib"]

[dependencies]
ctr = "0.9"
aes = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
cipher = "0.4"
bcrypt = "0.15"
base64 = "0.22"
spake2 = "0.4"
rand = "0.8"
log = "0.4"
secstr = "0.5"
hyper = {version = "1", features = ["full"]}
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
http = "1.1"
percent-encoding = "2.3"
url = "2.5"
futures = "0.3"
hyper-tls = {version = "0.6", features = ["vendored"]}
native-tls = "0.2"
xml-rs = "0.8"
openssl-probe = "0.1"
terminal-clipboard = "0.4"
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
serde_json = "1.0"
rs-password-utils = "0.2"
async-trait = "0.1"
zeroize = {version = "1.8", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.10"

[dependencies.toml]
version = "0.8"
default-features = false
features = ["preserve_order", "display", "parse"]

[dev-dependencies]
lazy_static = "1.5"